fix boucing white space

--- a/index.css
+++ b/index.css
@@ -22,7 +22,6 @@ a {
 a:hover {
   opacity: 0.7;
   color: blanchedalmond;
-  /* letter-spacing: 2px; */
 }
 
 a:focus {
@@ -30,11 +29,14 @@ a:focus {
   color: blanchedalmond;
 }
 
+/* fix over scroll cause bouncing white space  */
+html {
+  overscroll-behavior-y: none;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #fff;
-  /* overflow: hidden; */
-  height: 100%;
 }
 
 :root {
@@ -125,7 +127,6 @@ nav ul {
   width: 100%;
   padding: 60px;
   height: 100%;
-  position: relative;
   padding-bottom: 0;
 }
 
